[package]
name = "bashtestmd"
version = "0.4.2"
description = "Compiles shell commands in .md files into Bash scripts for testing"
edition = "2021"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
readme = "README.md"
repository = "https://github.com/sovereign-labs/bashtestmd"
homepage = "https://www.sovereign.xyz"
license = "MIT OR Apache-2.0"

resolver = "2"
autotests = false
publish = true

[dependencies]
clap = { version = "4", features = ["derive"] }
indoc = "2"
markdown = "1.0.0-alpha.16"
shell-escape = "0.1.5"
